objects/vlocity_cmt__ProfilingSegment__c.object
<CustomObject>
    <description>DEPRECATED. Use Vlocity Attributes.</description>
    <fields>
        <fullName>vlocity_cmt__AutoCode__c</fullName>
        <displayFormat>SEGMENT-{0}</displayFormat>
        <label>Auto Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <description>Short Code for segments</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProfSegCategory__c</fullName>
        <description>Parent segment category</description>
        <label>Profiling Segment Category</label>
        <referenceTo>vlocity_cmt__ProfilingSegmentCategory__c</referenceTo>
        <relationshipLabel>Profiling Segments</relationshipLabel>
        <relationshipName>ProfilingSegments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UniqueNameField__c</fullName>
        <description>unique segment name field ,a concat of parent categoryCode &amp; Name</description>
        <label>UniqueNameField</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Profiling Segment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profiling Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>